# huawei-hakathon

./: README.md  SOLUTION.md  configmaps.yaml  ingress.yaml  namespace.yaml  ports.sh  pyproject.toml  run.sh  setup.sh
after/satalite/: after-deployment.yaml  app.py  requirement.txt  scheduler.py  supervisord.conf  test.py
after/satalite/reports/: firewatch_report_periodic_20260307_0301.md  firewatch_report_periodic_20260307_0304.md  firewatch_report_periodic_20260307_0311.md  firewatch_report_periodic_20260307_1227.md
before/: Dockerfile  app.py  before-deployment.yaml  config.py  predictor.py  simulator.py  supervisord.conf
before/models/: lgb_v2.txt  meta_lr_v2.pkl  scaler_v2.pkl  tabmlp_v2.pt  xgb_v2.json
during/: app.py  detector.py  during-deployment.yaml  simulate.py  supabase_client.py  supervisord.conf
